# reveal

./: .babelrc  .bazelignore  .bazelrc  .bulldozer.yaml  .ci.bazelrc  .editorconfig  .env  .env.development  .env.example  .eslintcache  .eslintignore  .eslintrc  .eslintrc.js  .eslintrc.json  .eslintrc.production.js  .firebaserc  .gitattributes  .gitignore  .nxreleaserc.json  .prettierc  .prettierignore  .prettierrc  .releaserc  .rescriptsrc.js  .secrets.yaml  .testcaferc.json  .travis.yml  BUILD.bazel  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  Folder.DotSettings  Jenkinsfile  NodejsConsoleApp1.njsproj  NodejsConsoleApp1.sln  README.md  RELEASE-PROCESS.md  RELEASING.md  (+45 more)
.baker/: BUILD.bazel  clusters.yaml
apps/: BUILD.bazel  Caddyfile  apps.bzl  entrypoint.sh  jest.config.js  jest.react.config.js  project.json  vite.config.js  vite.storybook.config.js
apps/3d-management/: .babelrc  .eslintrc.js  .eslintrc.json  .eslintrc.production.js  .gitignore  .rescriptsrc.js  Jenkinsfile  README.md  config-overrides.js  cypress.config.ts  firebase.json  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack-config.js
apps/access-management/: .babelrc  .eslintrc.json  README.md  cypress.config.ts  jest.config.ts  package.json  project.json  tsconfig.json  webpack-config.js
apps/blueprint/: .env.development  .eslintrc.js  .gitignore  .testcaferc.json  BUILD.bazel  README.md  index.html  package.json  tsconfig.json  tsconfig.testcafe.json  vite.config.ts
apps/business-shell/: README.md  firebase.json  index.html  jest.config.ts  package.json  project.json  tsconfig.json  vite.config.ts  webpack-config.js
apps/cdf-document-search/: .eslintrc.json  .eslintrc.production.js  config-overrides.js  firebase.json  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  webpack.config.js
apps/cdf-nx-plugin-e2e/: jest.config.ts  project.json
apps/charts/: .babelrc  .eslintrc.json  README.md  cypress.config.ts  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack-config.js
apps/charts-app/: firebase.json  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json
apps/charts-e2e/: project.json
apps/coding-conventions/: README.md  jest.config.ts  package.json  project.json  webpack-config.js
apps/cognite-ornate/: .eslintrc.js  .gitignore  BUILD.bazel  index.html  package.json  vite.config.ts
apps/cognuit/: .env.development  .env.production  .eslintrc.js  .gitignore  BUILD.bazel  Jenkinsfile  index.html  package.json  vite.config.ts
apps/contextualization-ui/: README.md  firebase.json  jest.config.ts  package.json  project.json  tsconfig.app.json  webpack-config.js
apps/copilot/: README.md  jest.config.ts  package.json  project.json  tsconfig.json  webpack-config.js
apps/data-catalog/: .babelrc  .eslintrc.json  README.md  jest.config.ts  package.json  project.json  proxy.conf.json  tsconfig.app.json  tsconfig.json  webpack-config.js
apps/data-exploration/: .babelrc  .eslintrc.json  .eslintrc.production.js  README.md  firebase.json  jest.config.ts  jest.preset.js  package.json  project.json  tsconfig.app.json  webpack-config.js
apps/data-exploration-e2e/: .eslintrc.json  cypress.config.ts  project.json  tsconfig.json
apps/demo-app-react/: jest.config.js  jest.config.ts
apps/demo-app-react-e2e/: cypress.json
apps/diagram-parsing/: README.md  jest.config.ts  package.json  project.json  tsconfig.json  webpack-config.js
apps/digital-cockpit/: .env.development  .env.production  .eslintrc.production.js  .gitignore  .testcaferc.json  BUILD.bazel  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/discover/: .env  .env.development  .env.production  .eslintrc.js  .eslintrc.production.js  .gitignore  .prettierignore  .testcaferc.json  BUILD.bazel  README.md  bundlesize.config.json  cypress.json  index.html  jest.config.js  package.json  tsconfig.json  vite.config.ts
apps/entity-matching/: .eslintrc.json  README.md  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  webpack-config.js
apps/explorer/: .env.development  .eslintrc.js  BUILD.bazel  README.md  cypress.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/extraction-pipelines/: .babelrc  .eslintrc.js  .eslintrc.json  .eslintrc.production.js  .gitignore  .prettierrc  .rescriptsrc.js  CODEOWNERS  Jenkinsfile  README.md  cypress.config.ts  firebase.json  jest.config.ts  package.json  project.json  test.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  webpack-config.js
apps/extractor-downloads/: .babelrc  .eslintrc.json  jest.config.ts  package.json  project.json  tsconfig.json  webpack-config.js
apps/flexible-data-explorer/: .eslintrc.json  README.md  cypress.config.ts  firebase.json  index.html  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts  webpack-config.js
apps/flows/: .babelrc  .eslintrc.json  firebase.json  jest.config.ts  package.json  project.json  tsconfig.app.json  tsconfig.eslint.json  tsconfig.json  tsconfig.spec.json  webpack-config.js
apps/functions-ui/: .babelrc  .eslintrc.json  App.tsx  AppWrapper.tsx  README.md  (+8 more)
debug-viewer/: Cargo.toml
f3df/: Cargo.toml
i3df/: Cargo.toml  build.rs  jsonOut.txt
openctm/: Cargo.toml
viewer/: .dependency-cruiser.js  .eslintignore  .eslintrc.common.js  .eslintrc.js  .gitignore  .prettierrc  .yarnrc.yml  Cargo.toml  ONLY_RENDER_SELECTED_NODES.md  README.md  api-extractor.json  custom.d.ts  datasource.ts  detailedSector.fbs  eslint.config.mjs  global.d.ts  glsl-import-tracker-loader.cjs  index.ts  internals.ts  jest.config.js  jest.config.ts  orgtest.org  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  puppeteer.config.js  reveal.api.md  tools.ts  tsconfig.common.json  tsconfig.json  tsconfig.lib.json  tsconfig.test.json  tsconfig.typedoc.json  tsconfig.vitest.json  tsconfig.webpack.json  tsfmt.json  tslint.json  vite.config.ts  vitest.config.ts  (+2 more)
(+29001 files in other folders)
