# generate manifest files hashes to be added into docker images
# so in case manifest is changed the new deployment is triggered

filegroup(
    name = "baker-files",
    srcs = [
        "clusters.yaml",
        "BUILD.bazel",
    ] + glob([
        "manifests/**/*.yaml",
    ]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "react-demo-app-manifests",
    srcs = glob(["manifests/react-demo-app/**/*.yaml"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "explorer-manifests",
    srcs = glob(["manifests/explorer/**/*.yaml"]),
    visibility = ["//visibility:public"],
)
