[package]
name = "f3df"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "f3df-dump"
path = "src/bin/dump.rs"
required-features = ["dump"]

[features]
default = []
dump = ["clap", "serde_yaml", "serde_json"]

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = { version = "1.0.40", optional = true }
byteorder = "1.3.2"
serde_yaml = { version = "0.8.9", optional = true }
bitflags = "1.1.0"
glsl-to-spirv = { version = "0.1", optional = true }
clap = { version = "2.33.0", optional = true }
arraymap = { version = "0.1.1", optional = true }
nalgebra-glm = { version = "0.4.0", optional = true }
nalgebra = { version = "0.18.0", optional = true }

