[package]
name = "f3df"
version = "0.1.1"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>", "Lars Moastuen <lars.moastuen@cognite.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "f3df-dump"
path = "src/bin/dump.rs"
required-features = ["dump"]

[features]
default = []
dump = ["clap", "serde_yaml", "serde_json"]

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = { version = "1.0.46", optional = true }
byteorder = "1.3.4"
serde_yaml = { version = "0.8.11", optional = true }
bitflags = "1.2.1"
glsl-to-spirv = { version = "0.1.7", optional = true }
clap = { version = "2.33.0", optional = true }
arraymap = { version = "0.1.1", optional = true }
nalgebra = { version = "0.20.0", features = [ "serde-serialize" ] }
js-sys = "0.3.37"
wasm-bindgen = "0.2.58"
serde-wasm-bindgen = "0.1.3"
approx = "0.3.2"
structopt = "0.3.14"
