[package]
name = "f3df"
version = "0.1.1"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>", "Lars Moastuen <lars.moastuen@cognite.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "f3df-dump"
path = "src/bin/dump.rs"
required-features = ["dump"]

[features]
default = []
dump = ["structopt", "serde_yaml", "serde_json"]

[dependencies]
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.56", optional = true }
byteorder = "1.3.4"
serde_yaml = { version = "0.8.13", optional = true }
bitflags = "1.2.1"
nalgebra = { version = "0.21.1", features = [ "serde-serialize" ] }
structopt = { version = "0.3.15", optional = true }

[dev-dependencies]
approx = "0.3.2"
