[package]
name = "i3df"
version = "0.1.0"
authors = [
    "Fredrik Østrem <fredrik.ostrem@cognite.com>",
    "Svenn-Arne Dragly <dragly@cognite.com>",
]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "i3df-dump"
path = "src/bin/dump.rs"
required-features = ["dump"]

[dependencies]
clap = "2.33.1"
byteorder = "1.3.4"
nalgebra = { version = "0.21.1", features = [ "serde-serialize" ] }
impl_ops = "0.1.1"
serde = "1.0.114"
serde_derive = "1.0.104"
serde_json = { version = "1.0.55", optional = true }
serde_yaml = { version = "0.8.13", optional = true }
serde_bytes = { version = "0.11.5", optional = true }
#js-sys = { version = "0.3.27", optional = true }
#wasm-bindgen = { version = "0.2.50", optional = true }
js-sys = "0.3.40"
serde-wasm-bindgen = "0.1.3"
structopt = "0.3.15"
Inflector = "0.11.4"

[dependencies.wasm-bindgen]
version = "0.2.63"
features = ["serde-serialize"]

[build-dependencies]
serde_yaml = "0.8.13"
serde = { version = "1.0.114", features = ["derive"] }
heck = "0.3.1"
i3df-specification = { git = "git://github.com/cognitedata/i3df-specification", version = "0.1.0" }
quote = "1.0.7"
proc-macro2 = "1.0.18"
rustfmt = "0.10.0"
indexmap = { version = "1.4.0", features = ["serde-1"] }

[features]
dump = ["serde_json", "serde_yaml"]
#wasm = ["js-sys", "wasm-bindgen"]
