[package]
name = "openctm"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
num = "0.2.0"
num-derive = "0.2.5"
num-traits = "0.2.8"
log = "0.4.6"
serde_json = "1.0.40"
serde = { version = "1.0.99", features = ["derive"] }
clap = "2.33.0"
serde_yaml = "0.8.9"
structopt = "0.3.9"
serde_derive = "1.0.104"
lzma-rs = "0.1.3"
