[package]
name = "openctm"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "octm-dump"
path = "src/bin/dump.rs"
required-features = ["dump"]

[features]
dump = ["structopt", "serde_json", "serde_yaml"]

[dependencies]
byteorder = "1.3.2"
num = "0.2.0"
num-derive = "0.2.5"
num-traits = "0.2.8"
serde_json = { version = "1.0.40", optional = true }
serde = { version = "1.0.99", features = ["derive"] }
serde_yaml = { version = "0.8.9", optional = true }
structopt = { version = "0.3.9", optional = true }
lzma-rs = "0.1.3"
