[package]
name = "reveal-rs-wrapper"
description = "Wrapper around reveal-rs to expose functions in this project"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize"] }
js-sys = "0.3.37"
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.104"
arraymap = "0.1.1"
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = "0.1.3"
serde_bytes = "0.11.3"
byteorder = "1.3.4"
openctm = { git = "https://github.com/cognitedata/openctm-rs", rev="e0a0e2634db83c6aaf697cf54c7c48b9d985cdd5" }
i3df = { path = "../i3df" }
f3df = { path = "../f3df" }

[dependencies.web-sys]
version = "0.3.35"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[profile.release]
# TODO this enables debug symbols - remove when actually releasing to reduce file size
debug = true
