[package]
name = "reveal-rs-wrapper"
description = "Wrapper around reveal-rs to expose functions in this project"
version = "0.1.0"
authors = ["Svenn-Arne Dragly <dragly@cognite.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
path = "rust/lib.rs"

[dependencies]
wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"] }
js-sys = "0.3.41"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.104"
arraymap = "0.1.1"
console_error_panic_hook = "0.1.6"
serde-wasm-bindgen = "0.1.3"
serde_bytes = "0.11.5"
byteorder = "1.3.4"
openctm = { git = "https://github.com/cognitedata/openctm-rs", rev="aaee843a4788188ed4e4dfc3f8e0836c9a39240a" }
i3df = { path = "../i3df" }
f3df = { path = "../f3df" }

[dependencies.web-sys]
version = "0.3.41"
features = [
  'console',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[profile.release]
# TODO this enables debug symbols - remove when actually releasing to reduce file size
debug = true
